## Process this file with automake to produce Makefile.in

#
# filter_distdefs Makefile.am
#
# Copyright:
#       Copyright (c) 2006 SFNT Finland Oy.
#       All rights reserved
#

## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = 1.0 foreign dist-zip no-dependencies
clean-local:
includes:

EXTRA_DIST =                              \
	with_mscapi_crypto_and_certs.dist \
	without_certs.dist                \
	without_dns_policy.dist           \
        without_gcm_mode.dist             \
	without_l2tp.dist                 \
	without_firewall.dist             \
	without_http_server.dist          \
	without_eap.dist                  \
	without_nat.dist                  \
	without_nat_traversal.dist        \
	without_remote_access.dist        \
	without_remote_access_server.dist \
	without_sa_export.dist            \
	without_sctp.dist                 \
	without_ikev1.dist		  \
	without_sha2.dist                 \
	without_ipcomp.dist		  \
	without_cfgmode.dist		  \
	without_ecp.dist		  \
	without_tls.dist		  \
	without_virtual_adapter.dist	  \
	without_mobike.dist


