#
# interceptor/Makefile.am.raw
#
# Copyright:
#       Copyright (c) 2008 SFNT Finland Oy.
#       All rights reserved
#

AUTOMAKE_OPTIONS = 1.0 foreign dist-zip no-dependencies
SUBDIRS = \
	linux               \
       windows              \
	usermode            \
	libkernelutil       \
	include











SUBDIRS_windelta = +windows

includes:
