## Process this file with automake to produce Makefile.in

#
# winconf/Makefile.am
#
# Author: Markku Rossi <mtr@ssh.fi>
#
#  Copyright:
#          Copyright (c) 2002, 2003, 2007 SFNT Finland Oy.
#               All rights reserved
#

AUTOMAKE_OPTIONS = 1.0 foreign dist-zip no-dependencies
WINCONF_OPTIONS = ignore

SUBDIRS =                       \
	msvc80			\
	wdk




EXTRA_DIST =			\
	substitute.exe		\
	substitute.txt		





