#
# Makefile.am.raw
#
# Copyright:
#       Copyright (c) 2002-2004 SFNT Finland Oy.
#       All rights reserved.
#
# Automakefile for `interceptor/include'.
#

AUTOMAKE_OPTIONS = 1.0 foreign dist-zip no-dependencies
noinst_HEADERS =               \
        engine.h                \
        engine_alloc.h          \
        engine_hwaccel.h        \
        interceptor.h           \
        kernel_alloc.h          \
        kernel_mutex.h          \
        kernel_timeouts.h       \
	virtual_adapter.h




includes:
