#
# interceptor/libkernelutil/Makefile.am.raw
#
# Copyright:
#       Copyright (c) 2008 SFNT Finland Oy.
#       All rights reserved.
#

AUTOMAKE_OPTIONS = 1.0 foreign dist-zip no-dependencies
EXTRA_DIST = \
	Makefile.fragment \
	$(KERNEL_UTIL_SRCS)

include $(top_srcdir)/interceptor/libkernelutil/Makefile.fragment
