#
# src/interceptor/linux/Makefile.am.raw
#
# Copyright:
#       Copyright (c) 2008 - 2009 SFNT Finland Oy.
#       All rights reserved
#

AUTOMAKE_OPTIONS = 1.0 foreign dist-zip no-dependencies
EXTRA_DIST = \
	linux_debug.c \
	linux_internal.h \
	linux_ipm.c \
	linux_kernel_alloc.c \
	linux_main.c \
	linux_misc.c \
	linux_mutex.c \
	linux_mutex_internal.h \
	linux_packet.c \
	linux_packet_internal.h \
	linux_params.h \
	linux_pcihw.c \
	linux_procfs.c \
	linux_timeout.c \
	linux_versions.h \
	platform_interceptor.h \
	platform_kernel_alloc.h \
	platform_kernel_mutex.h \
	linux_hook_magic.c \
	linux_iface.c \
	linux_ip_glue.c \
	linux_nf_internal.h \
	linux_nf_params.h \
	linux_virtual_adapter.c \
	linux_virtual_adapter_internal.h \
	linux_octeon_intercept.c \
	linux_octeon_interceptor.h \
	linux_route.c \
	DIRECTORY README
















