#
# interceptor/usermode/Makefile.am.raw
#
#  Copyright:
#          Copyright (c) 2002-2008 SFNT Finland Oy.
#               All rights reserved.
#
# Automakefile for `/interceptor/usermode'.
#

AUTOMAKE_OPTIONS = 1.0 foreign dist-zip no-dependencies
EXTRA_DIST = \
	$(USERMODE_INTERCEPTOR_SRCS) \
	Makefile.fragment

include $(top_srcdir)/interceptor/usermode/Makefile.fragment