#
# src/interceptor/windows/Makefile.am.raw
#
# Copyright:
#       Copyright (c) 2008 SFNT Finland Oy.
#       All rights reserved
#

AUTOMAKE_OPTIONS = 1.0 foreign dist-zip no-dependencies
SUBDIRS = \
        vnic \
        winim \
        ndisfilter 







SUBDIRS_windelta = \
        +vnic \
        +winim \
        +ndisfilter 







EXTRA_DIST = \
           adapter_common.c             \
           adapter_common.h             \
           alloc.c                      \
           debug_trace.c                \
           debug_trace.h                \
           event.c                      \
           event.h                      \
           event_log.c                  \
           event_log.h                  \
           event_log_msg.h              \
           event_log_msg.mc             \
           file_io.h                    \
           device_io.h                  \
           icept_api_common.c           \
           interceptor_i_common.c       \
           interceptor_i_common.h       \
           iodevice.c                   \
           iodevice.h                   \
           mutex.c                      \
           ndis5_packet_pool.c          \
           ndis5_packet_pool.h          \
           ndis5_packet_pool_impl.c     \
           ndis6_packet_pool.c          \
           ndis6_packet_pool.h          \
           ndis6_packet_pool_impl.c     \
           ndis_render.c                \
           ndis_render.h                \
           packet_pool_common.c         \
           packet_pool_common.h         \
           packet_pool_impl.c           \
           pktizer.c                    \
           pktizer.h                    \
           platform_kernel_alloc.h      \
           platform_kernel_mutex.h      \
           registry.c                   \
           registry.h                   \
           secsys.c                     \
           secsys.h                     \
           task.c                       \
           task.h                       \
           timeout.c                    \
           wince_debug_trace.c          \
           wince_event_log.c            \
           wince_file_io.c              \
           wince_iodevice.c             \
           virtual_adapter.c            \
           virtual_adapter_private.c    \
           virtual_adapter_private.h    \
           ipdevice.c                   \
           ipdevice.h                   \
           ipdevice_internal.h          \
           wince_ipdevice.c             \
           wan_interface.c              \
           wan_interface.h              \
           win_ip_interface.c           \
           win_ip_interface.h           \
           win_ip_route.c               \
           win_ip_route.h               \
           win_ip_route_ce.c            \
           winnt6_ipdevice.c            \
           winnt_ipdevice.c             \
           winnt_file_io.c              \
           winnt_device_io.c            \
           win_os_version.h             \
           wrkqueue.c                   \
           wrkqueue.h








        
