# -*- makefile -*-
#
# ipsec/hwaccel/Makefile.am.raw

EXTRA_DIST = Makefile.fragment sshpcihw.h

SUBDIRS = \
	safenet1x41             \
        safenetwludm            \
        ocf		        \
        safenet_pe		        \
	none 


































include $(top_srcdir)/ipsec/hwaccel/Makefile.fragment

includes:
