## Process this file with automake to produce Makefile.in
#
# src/ipsec/include/Makefile.am
#
#  Copyright:
#          Copyright (c) 2002, 2003 SFNT Finland Oy.
# All rights reserved
#

AUTOMAKE_OPTIONS = 1.0 foreign dist-zip no-dependencies
LDADD =

CLEANFILES = *.h

all:
	(cd .. && $(MAKE) includes)

includes:
