#
# ipsec/util/Makefile.am.raw
#
# Copyright:
#       Copyright (c) 2002-2004 SFNT Finland Oy.
#       All rights reserved.
#

AUTODIST_OPTIONS = lnsrcs
AUTOMAKE_OPTIONS = 1.0 foreign dist-zip no-dependencies
EXTRA_DIST = Makefile.fragment $(IPSEC_UTIL_SRCS) $(VIRTUAL_ADAPTER_SRCS)

include $(top_srcdir)/ipsec/util/Makefile.fragment

includes:
